--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ input:focus{
 }
 
 ::placeholder{
-    color:#cbcbcb;
+    color:#c9c9c9;
     font-family: Helvetica,Arial, sans-serif;
     font-size: larger;
 }
