--- a/main.css
+++ b/main.css
@@ -1,12 +1,3 @@
-/* 
-    Document   : brb, gone fishing ;)
-    Created on : January 1st, 1970 at 00:00:00 UTC
-    Author     : Danger Penguin.
-    Description:
-        let's meet at our redenzvous?
-        Sloppy, and shite css, literally done in like 30 minutes idk. Serves it purpose tho.
-*/
-
 :root {
     --login:#428bca;
     --glemtpassord:#5bc0de;
@@ -50,6 +41,7 @@ input:focus{
     color:#c9c9c9;
     font-family: Helvetica,Arial, sans-serif;
     font-size: larger;
+    opacity: 1;
 }
 #username{
     margin-bottom: -1px;
@@ -105,9 +97,10 @@ input:focus{
 h2 {
     color: #333;
     font-size: 30px;
-    font-weight: normal; 
+    font-family: Helvetica,Arial, sans-serif; /* The actual one uses helvetica neue, but for some reason it doesn't look correct ? */
     box-sizing: border-box;
-    height:33px;
+    font-weight: normal;
+    line-height:33px;
     width:300px;
     margin-top: 20px;
     margin-bottom: 10px;
